ajout logique de la cart part2

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,7 +11,13 @@
         -->
         <mat-grid-list gutterSize="10" [cols]="cols" [rowHeight]="rowHeight">
             <mat-grid-tile>
-                <app-product-box class="w-full" [fullWidthMode]="cols === 1"></app-product-box>
+                <app-product-box 
+                    class="w-full" 
+                    [fullWidthMode]="cols === 1"    
+                    (addToCart)="onAddToCart($event)"
+                    [product]="product"
+                    >
+                </app-product-box>
             </mat-grid-tile>
         </mat-grid-list>
     </mat-sidenav-content>
