ajout logique de la cart part2 (la suite logique des boutons de la cartcomponent)

--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -47,7 +47,7 @@
             </td>
             <td mat-footer-cell *matFooterCellDef>
                 <span>
-                    {{getTotalPrice(cart.items) | currency}}
+                    {{getTotal(cart.items) | currency}}
                 </span>
             </td>
         </ng-container>
