--- a/src/app/pages/home/product-box/product-box.component.html
+++ b/src/app/pages/home/product-box/product-box.component.html
@@ -11,7 +11,7 @@
             </div>
             <div class="flex justify-between pl-2 pr-2">
                 <span class="text-red-600">{{ 150 | currency }}</span>
-                <button (click)="addToCart()">
+                <button (click)="onAddToCart()">
                     <mat-icon class="text-gray-500 text-xl">shopping_cart</mat-icon>
                 </button>
             </div>
