--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,41 +2,29 @@
     <a routerLink="home">Ecomm Store</a>
     <button mat-icon-button [matMenuTriggerFor]="menu" aria-hidden="false">
         <mat-icon
-            matBadge="1"
+            [matBadge]="itemsQuantity"
+            [matBadgeHidden]="!itemsQuantity"
             matBadgeColor="warn"
         >shopping_cart</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
         <div class="p-3 divide-y divide-solid">
             <div class="pb-3 flex justify-between">
-                <span class="mr-16">1 Items</span>
+                <span class="mr-16">{{itemsQuantity}} Items</span>
                 <a routerLink="cart">View Cart</a>
             </div>
-            <div class="py-3">
-                <div class="flex justify-between font-light mb-2">
-                    Keyboard x 1
-                    <span class="font-bold">{{ '150' | currency}}</span>
+            <div class="py-3" *ngIf="cart.items.length">
+                <div class="flex justify-between font-light mb-2" *ngFor="let item of cart.items">
+                    {{item.name}} x {{item.quantity}}
+                    <span class="font-bold">{{ item.price | currency}}</span>
                 </div>
-                <div class="flex justify-between font-light mb-2">
-                    Keyboard x 1
-                    <span class="font-bold">{{ '150' | currency}}</span>
-                </div>
-                <div class="flex justify-between font-light mb-2">
-                    Keyboard x 1
-                    <span class="font-bold">{{ '150' | currency}}</span>
-                </div>
-                <div class="flex justify-between font-light mb-2">
-                    Keyboard x 1
-                    <span class="font-bold">{{ '150' | currency}}</span>
-                </div>
-                
             </div>
             <div class="flex justify-between py-3 font-light mb-2">
                 Total:
-                <span class="font-bold">{{ '600' | currency}}</span>
+                <span class="font-bold">{{ getTotal(cart.items) | currency}}</span>
             </div>
             <div class="pt-3 flex justify-between">
-                <button class="bg-rose-600 text-white rounded-full w-9 h-9">
+                <button class="bg-rose-600 text-white rounded-full w-9 h-9" (click)="onClearCart()">
                     <mat-icon>remove_shopping_cart</mat-icon>
                 </button>
                 <button class="bg-green-600 text-white rounded-full w-9 h-9">
