--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,15 +3,21 @@
         <app-filters (showCategory)="onShowCategory($event)"></app-filters>
     </mat-sidenav>
     <mat-sidenav-content class="p-6">
-        <app-products-header (columnsCountChange)="onColumnsCountChange($event)"></app-products-header>
+        <app-products-header 
+            (columnsCountChange)="onColumnsCountChange($event)"
+            (itemCountChange)="onItemCountChange($event)"
+            (itemSortChange)="onItemSortChange($event)"
+            >
+        </app-products-header>
         <!-- 
         {{cols}}
         {{category}} 
         {{rowHeight}}
         -->
         <mat-grid-list gutterSize="10" [cols]="cols" [rowHeight]="rowHeight">
-            <mat-grid-tile>
+            <mat-grid-tile *ngFor="let product of products">
                 <app-product-box 
+                    [product]="product"
                     class="w-full" 
                     [fullWidthMode]="cols === 1"    
                     (addToCart)="onAddToCart($event)"
